test afbeelding en extra tekst

--- a/MijnWebpagina.html
+++ b/MijnWebpagina.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<time>Mijn Webpagina</time>
+		<meta charset="UTF-8">
 		<link type="text/css" rel="stylesheet" href="css/style.css">
 	</head>
 		<body>
 			<h1>Mijn eigen webpagina</h1>
+			<img src="test.jpg">
 			<h2>Thomas Brink</h2>
-			<p>Ik heb voor de opleiding software development gekozen omdat het me leuk leek om software te kunnen maken. Hiervoor had ik nog geen evaring met software developen
-			
-			Wat er voorzorgt dat ik gemotiveerd blijf is voornamelijk dat ik het leuk vind om te expirimenteren met de dingen die ik heb geleerd</p>
+			<p>Ik heb voor de opleiding software development gekozen omdat het me leuk leek om software te kunnen maken. Hiervoor had ik nog geen evaring met software developen. Wat er voorzorgt dat ik gemotiveerd blijf is voornamelijk dat ik het leuk vind om te expirimenteren met de dingen die ik heb geleerd</p>
 
-			<p></p>
+			<p>Mijn ontwikkelings punten zijn dat ik graag zonder terug te kijken naar eerder gemaakte codes een code kan gaan schrijven en dat css makelijk kan gaan toepassen met bijvoorbeeld het floaten van images. Voor dat ik aan deze opleiding begon heb ik mavo gedaan op het stedelijk dalton lyceeum. Ik heb nog geen bijbaan gehad</p>
+
+			<p>Bij mijn voor opleiding heb ik niet echt software developer gerelateerde kennis op gedaan behalve dan ik een profielwerkstuk moest maken over een vervolg opleiding en ik denk zelf dat misschien wiskunde bruikbaar kan zijn aangezien je daar voor logisch moet denken.</p>
+
+			
 			
 		</body>
 </html>
