text en afbeelding verplaast en borders geadd

--- a/MijnTwee.html
+++ b/MijnTwee.html
@@ -9,5 +9,9 @@
 
 	<p>Mijn ontwikkelings punten zijn dat ik graag zonder terug te kijken naar eerder gemaakte codes een code kan gaan schrijven en dat css makelijk kan gaan toepassen met bijvoorbeeld het floaten van images. Voor dat ik aan deze opleiding begon heb ik mavo gedaan op het stedelijk dalton lyceeum. Ik heb nog geen bijbaan gehad</p>
 
+	<p>Bij mijn vooropleiding heb ik niet echt software developer gerelateerde kennis op gedaan behalve dan ik een profielwerkstuk moest maken over een vervolg opleiding en ik denk zelf dat misschien wiskunde bruikbaar kan zijn aangezien je daar voor logisch moet denken.</p>
+
+	<img src="test.jpg">
+
 </body>
 </html>
