--- a/MijnWebpagina.html
+++ b/MijnWebpagina.html
@@ -5,17 +5,18 @@
 	</head>
 		<body>
 			<h1>Mijn eigen webpagina</h1>
-			<img src="test.jpg">
+			<img src="">
 			<h2>Thomas Brink</h2>
-		<article>
-			<p>Ik heb voor de opleiding software development gekozen omdat het me leuk leek om software te kunnen maken. Hiervoor had ik nog geen evaring met software developen. Wat er voorzorgt dat ik gemotiveerd blijf is voornamelijk dat ik het leuk vind om te expirimenteren met de dingen die ik heb geleerd</p>
+		<p>
+			Ik heb voor de opleiding software development gekozen omdat het me leuk leek om software te kunnen maken. Hiervoor had ik nog geen evaring met software developen. Wat er voorzorgt dat ik gemotiveerd blijf is voornamelijk dat ik het leuk vind om te expirimenteren met de dingen die ik heb geleerd.</p>
+		
 
-			<p>Bij mijn voor opleiding heb ik niet echt software developer gerelateerde kennis op gedaan behalve dan ik een profielwerkstuk moest maken over een vervolg opleiding en ik denk zelf dat misschien wiskunde bruikbaar kan zijn aangezien je daar voor logisch moet denken.</p>
-		</article>
+		<p>
 			<a href="MijnTwee.html">
 				Tweede pagina!
 
 			</a>
+		</p>
 
 			
 			
