Final met juiste foto

--- a/MijnTwee.html
+++ b/MijnTwee.html
@@ -11,7 +11,7 @@
 
 	<p>Bij mijn vooropleiding heb ik niet echt software developer gerelateerde kennis op gedaan behalve dan ik een profielwerkstuk moest maken over een vervolg opleiding en ik denk zelf dat misschien wiskunde bruikbaar kan zijn aangezien je daar voor logisch moet denken.</p>
 
-	<img src="test.jpg">
+	<img src="foto.jpg">
 
 </body>
 </html>
